--- a/stylesheet.css
+++ b/stylesheet.css
@@ -209,3 +209,30 @@ tr.divider hr {
   border-top: 1px solid var(--border-color);
   border-top: 1px solid #ccc; 
 }
+
+/* 3D flip container */
+.flip-container {
+  perspective: 1000px;
+}
+.flip-container .flipper {
+  position: relative;
+  width: 100%;
+  height: 0;
+  transform-style: preserve-3d;
+  transition: transform 0.6s;
+}
+.flip-container:hover .flipper {
+  transform: rotateY(180deg);
+}
+
+/* front/back faces */
+.flip-container .front,
+.flip-container .back {
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%; height: 0;
+  backface-visibility: hidden;
+}
+.flip-container .back {
+  transform: rotateY(180deg);
+}
